--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "To demonstrate how to evolve the multiply example using a Test First approach, from the first test, through to the last test.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
