--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "To demonstrate how to evolve the multiply example using a Test First approach, from the first test, through to the last test.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "lint": "eslint"
   },
   "keywords": [],
   "author": "",
