--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "multiply_test_first_tdd",
   "version": "1.0.0",
-  "type" : "module",
+  "type": "module",
   "description": "To demonstrate how to evolve the multiply example using a Test First approach, from the first test, through to the last test.",
   "main": "index.js",
   "scripts": {
@@ -12,8 +12,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.23.0",
     "chai": "^5.2.0",
     "eslint": "^9.23.0",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^16.0.0",
     "mocha": "^11.1.0"
   }
 }
