--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "devDependencies": {
     "@eslint/js": "^9.23.0",
     "chai": "^5.2.0",
-    "eslint": "^9.23.0",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^16.0.0",
     "mocha": "^11.1.0"
